# fullstack-template

./: .env.example  .gitignore  README.rst  justfile  setup.sh
.github/workflows/: lint.yml
backend/: .dockerignore  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py
backend/src/: __init__.py  __main__.py  config.py  factory.py  main.py
backend/tests/: test_auth.py  test_users.py
backends/fastapi/: cloudflared.compose.yml  compose.yml  dev.compose.yml  pyproject.toml
docs/research/: CLAUDE-CODE-PROGRAMMATIC.md  CLAUDE-MAX-SUBSCRIPTION-HEADLESS.md  DOCKER-NGINX.md  ENUMS.md  (+14 more)
frontend/: index.html  package.json  pnpm-lock.yaml  stylelint.config.js  vite.config.ts
stacks/fastapi-react/examples/minimal-production/backend/: .env.example  Dockerfile  README.md  pyproject.toml
stacks/fastapi-react/examples/minimal-production/backend/alembic/: env.py
stacks/fastapi-react/examples/minimal-production/backend/alembic/versions/: 20251215_000001_initial_schema.py
stacks/fastapi-react/examples/minimal-production/backend/app/: __main__.py  config.py  factory.py
stacks/fastapi-react/examples/minimal-production/backend/app/auth/: dependencies.py  routes.py  schemas.py  service.py
stacks/fastapi-react/examples/minimal-production/backend/app/core/: Base.py  common_schemas.py  constants.py  dependencies.py  enums.py  error_schemas.py  exceptions.py  health_routes.py  responses.py  security.py
stacks/fastapi-react/examples/minimal-production/backend/app/user/: User.py  dependencies.py  repository.py  routes.py  schemas.py  service.py
(+136 files in other folders)
